--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -137,20 +137,26 @@ For project `kiwi`
 	- The model for the second network interface is `virto`
 
 
-  ## Once the VM boot up, install the `mariadb` and `php` packages. Make sure that `mariadb` sevice should be up and running after the vm reboot.
+## Once the VM boot up, install the `mariadb` and `php` packages. Make sure that `mariadb` sevice should be up and running after the vm reboot.
 - One can download the yum.repo file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo"
 
 ## Create a Service:
 - Create a service name ex316-kiwi-svc
-
   - Type: NodePort
   - Pod Selector: app=web
-  - TCP Port 3306
+  - TCP Port 21 on Vm and each workernode is should use 30021
 ### Configure liveness probes.
 - Configure a liveness probe for this VM in the `kiwi` project and make sure following conditions are true:
 - The liveness probe tests the database server at TCP Port `3306`
 - The time (in seconds) after the VM instance starts before the liveness probe is initiated is `10`
 - The delay in seconds between performing probes is `5`
+
+### VirtualMachine to survive a node failure so that the following conditions are true:
+- VirtualMachine is automatically schedule on either `worker01.example.com` or `worker02.example.com`
+- In the event of a failure of either node, the VirtualMachine is automatically started on the other node
+
+## Create a Snapshot for VM.
+- 
 ---
 
 
