--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -155,8 +155,12 @@ For project `kiwi`
 - VirtualMachine is automatically schedule on either `worker01.example.com` or `worker02.example.com`
 - In the event of a failure of either node, the VirtualMachine is automatically started on the other node
 
-## Create a Snapshot for VM.
-- 
+## Create a Clone for VM.
+- Create a clone named `myvm-lan3-copy` with this VM.
+- Create a clone of rootdisk of `myvm-lan3` VM with name `myvm-lan3-clone-copy` in the same namesapce.
+- You can use the sample file `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/datavolume.yaml`
+
+## Create a Snapshot of this VM.
 ---
 
 
