Update 00. Task 6.md

--- a/DO316/00. Task 6.md
+++ b/DO316/00. Task 6.md
@@ -30,7 +30,7 @@
 - Once the VM boot up, install the `httpd` package and make sure that `httpd sevice` should be up and running after the vm reboot.
 - One can download the yum.repo file from `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo`
 - Download the `anish.html` file from `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/anish.html` and upload on `/var/www/html` on the VM.
-- ServerName must be `devops-wala`
+- ServerName must be `devops-wala.com`
 - A Clusterlp Service allows Web Traffic into the `myvm-lan1` VirtualMachine
 - Create a route named `banana-web-route` so that above service will be availabled at address `anishrana2001-la-banana.apps.ocp4.example.com`
 
@@ -167,16 +167,9 @@ total 8
 -rwxr-xr-x. 1 apache apache 173 Mar 13  2024 index.html
 -rw-r--r--. 1 root   root   303 Jun 21 05:51 anish.html
 
-[root@myvm-lan1 ~]# cat /etc/httpd/conf/httpd.conf | grep -i index.html
-    DirectoryIndex index.html
-[root@myvm-lan1 ~]# sed -i 's/index.html/anish.html/g' /etc/httpd/conf/httpd.conf 
-[root@myvm-lan1 ~]#
-
-[root@myvm-lan1 ~]# cat /etc/httpd/conf/httpd.conf | grep -i anish.html
-    DirectoryIndex anish.html
 
 [root@myvm-lan1 html]# systemctl restart httpd
-[root@myvm-lan1 ~]# curl localhost
+[root@myvm-lan1 ~]# curl localhost/anish.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
