--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -139,12 +139,21 @@ For project `kiwi`
 
 ## Once the VM boot up, install the `mariadb` and `php` packages. Make sure that `mariadb` sevice should be up and running after the vm reboot.
 - One can download the yum.repo file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo"
-
 ## Create a Service:
-- Create a service name ex316-kiwi-svc
+- Create a service name kiwi-svc-mariadb
   - Type: NodePort
   - Pod Selector: app=web
-  - TCP Port 21 on Vm and each workernode is should use 30021
+  - TCP Port 23 on Vm and each workernode is should use 30023
+  - Create a route named kiwi-mariadb-route so that above service will be availabled at address anishrana2001-la-mariadb-kiwi.apps.ocp4.example.com
+  
+## Create a Service:
+- Create a service name kiwi-svc-httpd
+  - Type: NodePort
+  - Pod Selector: app=web
+  - TCP Port 80 on Vm and each workernode is should use 30080
+  - Create a route named kiwi-httpd-route so that above service will be availabled at address anishrana2001-la-httpd-kiwi.apps.ocp4.example.com
+ 
+
 ### Configure liveness probes.
 - Configure a liveness probe for this VM in the `kiwi` project and make sure following conditions are true:
 - The liveness probe tests the database server at TCP Port `3306`
