--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -137,7 +137,7 @@ For project `kiwi`
 	- The model for the second network interface is `virto`
 
 
-## Once the VM boot up, install the `mariadb` and `php` packages. Make sure that `mariadb` sevice should be up and running after the vm reboot.
+## Once the VM boot up, install the `mariadb`, httpd and `php` packages. Make sure that `mariadb` and httpd sevices should be up and running after the vm reboot.
 - One can download the yum.repo file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo"
 ## Create a Service:
 - Create a service name kiwi-svc-mariadb
