Update 00. Task 6.md

--- a/DO316/00. Task 6.md
+++ b/DO316/00. Task 6.md
@@ -65,6 +65,15 @@ virtualmachineinstance.kubevirt.io/myvm-lan1   3m11s   Running   10.11.0.13   wo
 
 NAME                                   AGE     STATUS    READY
 virtualmachine.kubevirt.io/myvm-lan1   4m23s   Running   True
+
+############# Post checks for ssh key #############
+[student@workstation ~]$ virtctl ssh suraj@myvm-lan1 --identity-file=/home/student/.ssh/id_rsa
+Warning: Permanently added 'vmi/myvm-lan1.banana' (ED25519) to the list of known hosts.
+Last login: Sun Jun 22 05:48:48 2025
+[suraj@myvm-lan1 ~]$
+[suraj@myvm-lan1 ~]$exit
+########################
+
 [student@workstation ~]$ virtctl console myvm-lan1 
 Successfully connected to myvm-lan1 console. The escape sequence is ^]
 
