Update 00. Task 6.md

--- a/DO316/00. Task 6.md
+++ b/DO316/00. Task 6.md
@@ -72,6 +72,9 @@ Warning: Permanently added 'vmi/myvm-lan1.banana' (ED25519) to the list of known
 Last login: Sun Jun 22 05:48:48 2025
 [suraj@myvm-lan1 ~]$
 [suraj@myvm-lan1 ~]$exit
+
+OR you can use below command
+virtctl ssh -i /home/student/.ssh/id_rsa suraj@vm/myvm-lan1
 ########################
 
 [student@workstation ~]$ virtctl console myvm-lan1 
