Update 00. Task 5.md

--- a/DO316/00. Task 5.md
+++ b/DO316/00. Task 5.md
@@ -62,3 +62,11 @@ rolebinding.rbac.authorization.k8s.io/suraj-edit created
 rolebinding.rbac.authorization.k8s.io/punit-view created
 [student@workstation ~]$ 
 ```
+
+### For kiwi project.
+```
+oc create rolebinding punit-admin --clusterrole admin --user punit -n kiwi 
+oc create rolebinding raja-view --clusterrole view --user raja -n kiwi 
+oc get clusterrole | grep -i kubevirt | grep view
+oc create rolebinding raja-edit --clusterrole=kubevirt.io:edit --user raja -n kiwi
+```
