--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -110,7 +110,7 @@ For project `kiwi`
 ---
 
 ## Task 8. : Create a VirtualMachine in the `kiwi` project with below requirements. 
-- User `punit` should create a VirtualMachine named `myvm-lan3` from template "Red Hat Enterprise Linux 9 VM"
+- User `punit` should create a VirtualMachine named `myvm-lan3` from template `Red Hat Enterprise Linux 9 VM`
 - Use PVC URL, `http://utility.lab.example.com:8080/openshift4/images/rhel9-mariadb.qcow2`
 -  The StorageClassName is `ocs-external-storagecluster-ceph-rbd-virtualization`
 -  The PVC size should be 30GiB
@@ -138,20 +138,20 @@ For project `kiwi`
 
 
 ## Once the VM boot up, install the `mariadb`, httpd and `php` packages. Make sure that `mariadb` and httpd sevices should be up and running after the vm reboot.
-- One can download the yum.repo file from "https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo"
+- One can download the yum.repo file from `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/yum.repo-file.repo`
 ## Create a Service:
-- Create a service name kiwi-svc-mariadb
-  - Type: NodePort
-  - Pod Selector: app=web
-  - TCP Port 23 on Vm and each workernode is should use 30023
-  - Create a route named kiwi-mariadb-route so that above service will be availabled at address anishrana2001-la-mariadb-kiwi.apps.ocp4.example.com
+- Create a service name `kiwi-svc-mariadb`
+  - Type: `NodePort`
+  - Pod Selector: `app=web`
+  - TCP Port `23` on Vm and each workernode is should use `30023`
+  - Create a route named `kiwi-mariadb-route` so that above service will be availabled at address `anishrana2001-la-mariadb-kiwi.apps.ocp4.example.com`
   
 ## Create a Service:
-- Create a service name kiwi-svc-httpd
-  - Type: NodePort
-  - Pod Selector: app=web
-  - TCP Port 80 on Vm and each workernode is should use 30080
-  - Create a route named kiwi-httpd-route so that above service will be availabled at address anishrana2001-la-httpd-kiwi.apps.ocp4.example.com
+- Create a service name `kiwi-svc-httpd`
+  - Type: `NodePort`
+  - Pod Selector: `app=web`
+  - TCP Port `80` on Vm and each workernode is should use `30080`
+  - Create a route named `kiwi-httpd-route` so that above service will be availabled at address `anishrana2001-la-httpd-kiwi.apps.ocp4.example.com`
  
 
 ### Configure liveness probes.
@@ -169,7 +169,7 @@ For project `kiwi`
 - Create a clone of rootdisk of `myvm-lan3` VM with name `myvm-lan3-clone-copy` in the same namesapce.
 - You can use the sample file `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/datavolume.yaml`
 
-## Create a Snapshot of this VM.
+## Create a Snapshot of this VM with name 'myvm-lan3-snap1`
 ---
 
 
