--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -142,14 +142,14 @@ For project `kiwi`
 ## Create a Service:
 - Create a service name `kiwi-svc-mariadb`
   - Type: `NodePort`
-  - Pod Selector: `app=web`
+  - Pod Selector: `datacenter-test=web`
   - TCP Port `23` on Vm and each workernode is should use `30023`
   - Create a route named `kiwi-mariadb-route` so that above service will be availabled at address `anishrana2001-la-mariadb-kiwi.apps.ocp4.example.com`
   
 ## Create a Service:
 - Create a service name `kiwi-svc-httpd`
   - Type: `NodePort`
-  - Pod Selector: `app=web`
+  - Pod Selector: `datacenter-test=web`
   - TCP Port `80` on Vm and each workernode is should use `30080`
   - Create a route named `kiwi-httpd-route` so that above service will be availabled at address `anishrana2001-la-httpd-kiwi.apps.ocp4.example.com`
  
