--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -182,8 +182,8 @@ For project `kiwi`
 ---
 ## Task 12. : Create a Template.
 # Create a VirtualMachine Template
-  - Create a project `kiwi` and a VirtualMachine template according to the following requirements
-  - The Template name is `tmprhl9small` in the `kiwi` project
+  - Create a project `mango` and a VirtualMachine template according to the following requirements
+  - The Template name is `tmprhl9small` in the `mango` project
   - The Template is clone of the build-in rhel9-server-small template
   - Flavor small, with 1 CPU and 2Gi RAM
   - Storage space is 10Gi
@@ -196,16 +196,16 @@ For project `kiwi`
 
 ## Task 13. : Networking - Loadbalancing.
 
-- Using the temaple `tmprhl9small` which you created previously, create two VirtualMachines named `web1` and `web2` in the `kiwi` project. 
-- Create a service name `ex316-kiwi-svc`
+- Using the temaple `tmprhl9small` which you created previously, create two VirtualMachines named `web1` and `web2` in the `mango` project. 
+- Create a service name `ex316-mango-svc`
     Type: NodePort
     Pod Selector: app=web
 - TCP Port `21` of VM and workernodes port should be `30021`
 - Create a route named `web-route` so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
 - Perform the SSH to `anishrana2001-lb.apps.ocp4.example.com`
 - These VMs should able to migrate between the nodes with label `datacenter: paris`
-- These VMs in the Project `kiwi` is not able to migrate to any other nodes.
-- Clone the root disk of the VM named `web1` in the project `kiwi` as `web1-clone` by using Data Volumes.
+- These VMs in the Project `mango` is not able to migrate to any other nodes.
+- Clone the root disk of the VM named `web1` in the project `mango` as `web1-clone` by using Data Volumes.
 - Create a snapshot of this VM and named 'web1-copy`.
 
 ### VirtualMachine to survive a node failure so that the following conditions are true:
