--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -199,7 +199,7 @@ For project `kiwi`
 - Using the temaple `tmprhl9small` which you created previously, create two VirtualMachines named `web1` and `web2` in the `mango` project. 
 - Create a service name `ex316-mango-svc`
     Type: NodePort
-    Pod Selector: app=web
+    Pod Selector: exam=virtual
 - TCP Port `21` of VM and workernodes port should be `30021`
 - Create a route named `web-route` so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
 - Perform the SSH to `anishrana2001-lb.apps.ocp4.example.com`
