--- a/DO280/13. cronjob.md
+++ b/DO280/13. cronjob.md
@@ -1,3 +1,15 @@
+### Practice Purpose only.....
+### Create a cronjob `test-cron1` in the `tiger' project
+- `15:07` time
+- It should execute every january
+- Use image `registry.io/nginx`
+- Use service account and service account name is `ex280-sa1`
+- Successful job history limit `10`
+- Project name should be `tiger`
+- Create a cronjob using webconsole or take yaml from documentation
+---
+
+## Qeustion with Solution.
 # Create a cronjob `test-cron` in the `tiger' project
 - `04:05` time
 - Every 2 day and every month
