--- a/DO280/19. Operator.md
+++ b/DO280/19. Operator.md
@@ -1,4 +1,4 @@
-# For practice purpose: Deploy Openshift Virtualization operator in the openshift-cnv Project. Install and Configure Operator with the name kubevirt-hyperconverged in same Project.
+# For practice purpose: Deploy Openshift Virtualization operator in the `openshift-cnv` Project. Install and Configure Operator with the name `kubevirt-hyperconverged` in same Project.
 ---
 # Your task is to install the Operator `File Integrity Operator` in the namespace `openshift-file-integrity`, should enable the monitoring and update should be Automatic in the `mass` project. 
 ---
