Update 00. Task 5.md

--- a/DO316/00. Task 5.md
+++ b/DO316/00. Task 5.md
@@ -52,6 +52,8 @@ leaders      suraj
 qa           punit
 [student@workstation ~]$ 
 
+[student@workstation ~]$ oc create rolebinding qa-view123 --clusterrole=view --group=qa -n banana 
+[student@workstation ~]$ oc create rolebinding leader-admin --clusterrole=admin --group=leader -n banana 
 [student@workstation ~]$ oc create rolebinding raja-admin --clusterrole=admin --user=raja -n banana 
 rolebinding.rbac.authorization.k8s.io/raja-admin created
 [student@workstation ~]$ oc create rolebinding suraj-view --clusterrole=view --user=suraj -n banana 
@@ -63,6 +65,33 @@ rolebinding.rbac.authorization.k8s.io/punit-view created
 [student@workstation ~]$ 
 ```
 
+### For apple project:
+```
+[student@workstation ~]$ oc project apple 
+Already on project "apple" on server "https://api.ocp4.example.com:6443".
+[student@workstation ~]$ oc create rolebinding qa-view123 --clusterrole=view --group=qa -n apple
+oc create rolebinding leader-admin --clusterrole=admin --group=leader  -n apple
+oc create rolebinding suraj-admin --clusterrole=admin --user=suraj -n banana 
+oc create rolebinding raja-view --clusterrole=view --user=raja -n banana 
+oc create rolebinding punit-edit --clusterrole=edit --user=punit -n banana 
+oc create rolebinding punit-view --clusterrole=view --user=punit
+
+oc get rolebinding
+rolebinding.rbac.authorization.k8s.io/qa-view123 created
+rolebinding.rbac.authorization.k8s.io/leader-admin created
+rolebinding.rbac.authorization.k8s.io/suraj-admin created
+rolebinding.rbac.authorization.k8s.io/raja-view created
+rolebinding.rbac.authorization.k8s.io/punit-edit created
+rolebinding.rbac.authorization.k8s.io/punit-view created
+NAME                    ROLE                               AGE
+admin                   ClusterRole/admin                  90m
+leader-admin            ClusterRole/admin                  1s
+punit-view              ClusterRole/view                   1s
+qa-view123              ClusterRole/view                   2s
+system:deployers        ClusterRole/system:deployer        90m
+system:image-builders   ClusterRole/system:image-builder   90m
+system:image-pullers    ClusterRole/system:image-puller    90m
+```
 ### For kiwi project.
 ```
 oc create rolebinding punit-admin --clusterrole admin --user punit -n kiwi 
