Update 00. Task 5.md

--- a/DO316/00. Task 5.md
+++ b/DO316/00. Task 5.md
@@ -69,28 +69,25 @@ rolebinding.rbac.authorization.k8s.io/punit-view created
 ```
 [student@workstation ~]$ oc project apple 
 Already on project "apple" on server "https://api.ocp4.example.com:6443".
-[student@workstation ~]$ oc create rolebinding qa-view123 --clusterrole=view --group=qa -n apple
-oc create rolebinding leader-admin --clusterrole=admin --group=leader  -n apple
-oc create rolebinding suraj-admin --clusterrole=admin --user=suraj -n banana 
-oc create rolebinding raja-view --clusterrole=view --user=raja -n banana 
-oc create rolebinding punit-edit --clusterrole=edit --user=punit -n banana 
-oc create rolebinding punit-view --clusterrole=view --user=punit
 
-oc get rolebinding
-rolebinding.rbac.authorization.k8s.io/qa-view123 created
-rolebinding.rbac.authorization.k8s.io/leader-admin created
-rolebinding.rbac.authorization.k8s.io/suraj-admin created
-rolebinding.rbac.authorization.k8s.io/raja-view created
-rolebinding.rbac.authorization.k8s.io/punit-edit created
-rolebinding.rbac.authorization.k8s.io/punit-view created
+oc create rolebinding qa-view123 --clusterrole=view --group=qa -n apple
+oc create rolebinding leader-admin --clusterrole=admin --group=leader  -n apple
+oc create rolebinding suraj-admin --clusterrole=admin --user=suraj -n apple 
+oc create rolebinding raja-view --clusterrole=view --user=raja -n apple 
+oc create rolebinding punit-edit --clusterrole=edit --user=punit -n apple 
+oc create rolebinding punit-view --clusterrole=view --user=punit  -n apple 
+[student@workstation ~]$ oc get rolebinding
 NAME                    ROLE                               AGE
-admin                   ClusterRole/admin                  90m
-leader-admin            ClusterRole/admin                  1s
-punit-view              ClusterRole/view                   1s
-qa-view123              ClusterRole/view                   2s
-system:deployers        ClusterRole/system:deployer        90m
-system:image-builders   ClusterRole/system:image-builder   90m
-system:image-pullers    ClusterRole/system:image-puller    90m
+admin                   ClusterRole/admin                  97m
+leader-admin            ClusterRole/admin                  7m21s
+punit-edit              ClusterRole/edit                   48s
+punit-view              ClusterRole/view                   7m21s
+qa-view123              ClusterRole/view                   7m22s
+raja-view               ClusterRole/view                   49s
+suraj-admin             ClusterRole/admin                  49s
+system:deployers        ClusterRole/system:deployer        97m
+system:image-builders   ClusterRole/system:image-builder   97m
+system:image-pullers    ClusterRole/system:image-puller    97m
 ```
 ### For kiwi project.
 ```
