--- a/DO316/09. LoadBalancer.md
+++ b/DO316/09. LoadBalancer.md
@@ -4,7 +4,7 @@
 - Using the temaple `tmprhl9small` which you created previously, instantiate two identical VirtualMachine named `web1` and `web2`
 - Create a service name `ex316-kiwi-svc`
     Type: NodePort
-    Pod Selector: app=web
+    Pod Selector: `mydb=mariadb-kiwi`
 - TCP Port `21` of each VM is connected to any workernode port on `30021`
 - Create a route named web-route so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
 - Perform the SSH to anishrana2001-lb.apps.ocp4.example.com
