--- a/DO316/09. LoadBalancer.md
+++ b/DO316/09. LoadBalancer.md
@@ -6,9 +6,9 @@
     Type: NodePort
     Pod Selector: `mydb=mariadb-kiwi`
 - TCP Port `21` of each VM is connected to any workernode port on `30021`
-- Create a route named web-route so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
-- Perform the SSH to anishrana2001-lb.apps.ocp4.example.com
-- port 21 , Database port = 3306
+- Create a route named `web-route` so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
+- Perform the SSH to `anishrana2001-lb.apps.ocp4.example.com`
+- port `21` , Database port = `3306`
 ---
 
 ### Solution:
