--- a/DO316/09. LoadBalancer.md
+++ b/DO316/09. LoadBalancer.md
@@ -31,18 +31,48 @@ oc get vm,vmi -l app=web
 - Create a service name `ex316-kiwi-svc`
     - Type: NodePort
     - Pod Selector: app=web
-    - TCP Port 3306 of each VM is connected to any worker node port 23
-### Traffic first, reach to WorkerNode on Port 23 and then it will be forward to VMi on Port 3306. It means `--tcp=23:3306`
+    - TCP Port 30022 of each VM is connected to any worker node port 22
+### Traffic first, reach to WorkerNode on Port 22 and then it will be forward to VMi on Port 30022. It means `--tcp=22:22` &  `--node-port=30022`
 
   
-### Step 5. Create a service and modify the NodeSelector. In the end check the endpoints. It should point to web1 and web2 VM's IP.
+### Step 5. Create a service and modify the NodeSelector. In the end, check the endpoints. It should point to web1 and web2 VM's IP.
 ```
-oc create service nodeport ex316-kiwi-svc --tcp=21:30021
+oc create service nodeport ex316-kiwi-svc --tcp=22:22 --node-port=30022
 oc edit service/ex316-kiwi-svc
+
+[student@workstation ~]$ oc describe service ex316-kiwi-svc 
+Name:                     ex316-kiwi-svc
+Namespace:                kiwi
+Labels:                   app=ex316-kiwi-svc
+Annotations:              <none>
+Selector:                 mydb=mariadb-kiwi
+Type:                     NodePort
+IP Family Policy:         SingleStack
+IP Families:              IPv4
+IP:                       172.30.211.130
+IPs:                      172.30.211.130
+Port:                     22-22  22/TCP
+TargetPort:               22/TCP
+NodePort:                 22-22  30022/TCP
+Endpoints:                10.8.0.63:22,10.9.0.23:22
+Session Affinity:         None
+External Traffic Policy:  Cluster
+Events:                   <none>
+
+
 oc get endpoints ex316-kiwi-svc
 ```
 - Create a route named web-route so that above service will be availabled at address `anishrana2001-lb.apps.ocp4.example.com`
 ### Create a route.
 ```
 oc expose service ex316-kiwi-svc --hostname=anishrana2001-lb.apps.ocp4.example.com
+```
+
+### Post checks!!!
+```
+[student@workstation ~]$ telnet anishrana2001-lb.apps.ocp4.example.com 22
+Trying 192.168.50.254...
+Connected to anishrana2001-lb.apps.ocp4.example.com.
+Escape character is '^]'.
+SSH-2.0-OpenSSH_8.7
 ```
