--- a/DO316/12. RootDisk_clone.md
+++ b/DO316/12. RootDisk_clone.md
@@ -12,87 +12,21 @@ oc project kiwi
 apiVersion: cdi.kubevirt.io/v1beta1
 kind: DataVolume
 metadata:
-  name: web1-copy
+  name: web1-copy    ### New DataVolume Name
+  namespace: kiwi    ### It will create in the `kiwi` namespace
 spec:
   source:
     pvc: 
-      namespace: "kiwi" 
-      name: "web1" 
+      namespace: "kiwi"   ### It will copy from this namespace
+      name: "web1"        ### It will copy from this PVC
   storage: 
     resources:
       requests:
-        storage: 2Gi 
-    storageClassName: ocs-external-storagecluster-ceph-rbd-virtualization
+        storage: 11Gi   ### PVC size + 1 Gi
+    storageClassName: ocs-external-storagecluster-ceph-rbd-virtualization   ### StorageClass Name of web1 PVC
 ```
 ### Check the VM and VMi
 ```
 oc get vm,vmi
 oc get datavolume,pvc
-```
-### As  per the question, we have to clone the datavolume of `web1` VM. When you execute the below command, please check the "partition".
-
-```
-virtctl guestfs web1
-```
----
-#####  virtctl guestfs web1
-#####  Use image: registry.redhat.io/container-native-virtualization/libguestfs-tools-rhel9@sha256:92261bf1f5085f5e9ac8531af7a780c3fc40cdf1e30539968e90f1fe8bc68f2d 
-
- The PVC has been mounted at **/dev/vda** 👈👈👈
-##### Waiting for container libguestfs still in pending, reason: ContainerCreating, message:  
-##### Waiting for container libguestfs still in pending, reason: ContainerCreating, message:
----
-### Execute the below command.
-```
-virt-sysprep -a /dev/vda
-exit
-```
-### Post checks!!
-```
-oc get datavolume,pvc
-```
-## OR 
-```
-oc get dv,pvc
-```
-### Its time to create the clone of Base image.
-- Clone the root disk of the VM named `web1` in the project `kiwi` as `web1-copy` by using Data Volumes
-```
-virtctl create clone -h
-```
-
-```
-virtctl create clone --source-name web1 --target-name web1-clonevm --name web1-copy | oc apply -f -
-```
-
-## Check the VirtualMachineClone
-```
-oc get virtualmachineclone
-```
-#### Post checks!!
-
-```
-[student@workstation ~]$ oc get vm,vmi,dv,pvc
-NAME                                       AGE   STATUS    READY
-virtualmachine.kubevirt.io/database-kiwi   55m   Running   True
-virtualmachine.kubevirt.io/web1            45m   Stopped   False
-virtualmachine.kubevirt.io/web1-copy       3s    Stopped   False    👈👈👈👈👈👈
-virtualmachine.kubevirt.io/web2            44m   Running   True
-
-NAME                                               AGE   PHASE     IP           NODENAME   READY
-virtualmachineinstance.kubevirt.io/database-kiwi   54m   Running   10.8.0.66    master01   True
-virtualmachineinstance.kubevirt.io/web2            37m   Running   10.11.0.16   worker02   True
-
-NAME                                                                               PHASE       PROGRESS   RESTARTS   AGE
-datavolume.cdi.kubevirt.io/database-kiwi                                           Succeeded   100.0%                55m
-datavolume.cdi.kubevirt.io/restore-51336668-5d4c-4544-94d3-ccce11fd89a1-rootdisk   Succeeded   N/A                   3s   👈👈👈👈👈👈
-datavolume.cdi.kubevirt.io/rweb2                                                   Succeeded   100.0%                44m
-datavolume.cdi.kubevirt.io/web1                                                    Succeeded   100.0%                45m
-
-NAME                                                                          STATUS   VOLUME                                     CAPACITY   ACCESS MODES   STORAGECLASS                                          VOLUMEATTRIBUTESCLASS   AGE
-persistentvolumeclaim/database-kiwi                                           Bound    pvc-aaf89dfe-8a11-4af0-8e4d-af9775e5b935   10Gi       RWX            ocs-external-storagecluster-ceph-rbd-virtualization   <unset>                 55m
-persistentvolumeclaim/restore-51336668-5d4c-4544-94d3-ccce11fd89a1-rootdisk   Bound    pvc-aa693200-20de-46ca-8a20-62340897ba6b   30Gi       RWX            ocs-external-storagecluster-ceph-rbd-virtualization   <unset>                 4s     👈👈👈
-persistentvolumeclaim/rweb2                                                   Bound    pvc-b997328b-0e8b-4bb5-bf63-b041905159bd   30Gi       RWX            ocs-external-storagecluster-ceph-rbd-virtualization   <unset>                 44m
-persistentvolumeclaim/web1                                                    Bound    pvc-673c26ee-d76b-4946-bf04-d893a793f9ae   30Gi       RWX            ocs-external-storagecluster-ceph-rbd-virtualization   <unset>                 45m
-[student@workstation ~]$
 ```
