Update 15. vSphere VirtualMachine.md

--- a/DO316/15. vSphere VirtualMachine.md
+++ b/DO316/15. vSphere VirtualMachine.md
@@ -5,8 +5,9 @@ lab start advanced-import
 ```
 
 # Import a vSphere VirtualMachine
-- One or more VirtualMachine images are available for browsing from your workstation system using the command: `elinks dump utility.lab.example.com:/exports-ocp4/ova` images
-- Import the VirtualMachine called rhel9-web according to the following requirements:
+- Create a networkplan with named `vsphere` by using `Open Virtual Appliance (OVA)`
+- One or more VirtualMachine images are available for browsing from your workstation system using the command: `utility.lab.example.com:/exports-ocp4/ova` images
+- Import the VirtualMachine called `rhel9-web` according to the following requirements:
 - The imported VirtualMachine exists in the `vms-import` project
 - The network of the source VirtualMachine has been mapped to the `pod network` of the imported VirtualMachine.
 - The imported VirtualMachine used the `ocs-external-storagecluster-ceph-rbd-virtualization` storage class
