--- a/DO316/15. vSphere VirtualMachine.md
+++ b/DO316/15. vSphere VirtualMachine.md
@@ -6,7 +6,7 @@ lab start advanced-import
 
 # Import a vSphere VirtualMachine
 - Create a networkplan with named `vsphere` by using `Open Virtual Appliance (OVA)`
-- One or more VirtualMachine images are available for browsing from your workstation system using the command: `utility.lab.example.com:/exports-ocp4/ova` images
+- `utility.lab.example.com:/exports-ocp4/ova` images
 - Import the VirtualMachine called `rhel9-web` according to the following requirements:
 - The imported VirtualMachine exists in the `vms-import` project
 - The network of the source VirtualMachine has been mapped to the `pod network` of the imported VirtualMachine.
