--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -43,7 +43,8 @@ For project `kiwi`
 - User `raja` should able to view the VMs.
 ---
 
-## Task 6. : Create a VirtualMachine in the `banana` project with below requirements. 
+## Task 6. : Create a VM from Teamplate. 
+- Create a VirtualMachine in the `banana` project with below requirements. 
 - User `raja` should create a VirtualMachine named `myvm-lan1` from template "Red Hat Enterprise Linux 9 VM"
 - Use PVC URL, `http://utility.lab.example.com:8080/openshift4/images/rhel9-helloworld.qcow2`
 - The StorageClassName is `ocs-external-storagecluster-ceph-rbd-virtualization`
@@ -77,6 +78,16 @@ For project `kiwi`
 - A Clusterlp Service allows Web Traffic into the `myvm-lan1` VirtualMachine
 - Create a route named `banana-web-route` so that above service will be availabled at address `anishrana2001-la-banana.apps.ocp4.example.com`
 
+### VirtualMachine to survive a node failure so that the following conditions are true:
+- VirtualMachine is automatically schedule on either `worker01.example.com` or `worker02.example.com`
+- In the event of a failure of either node, the VirtualMachine is automatically started on the other node
+
+## Create a Clone for VM.
+- Create a clone named `myvm-lan1-copy` with this VM.
+- Create a clone of rootdisk of `myvm-lan1` VM with name `myvm-lan1-clone-copy` in the same namesapce.
+- You can use the sample file `https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/DO316/datavolume.yaml`
+
+## Create a Snapshot of this VM with name 'myvm-lan3-snap1`
 ---
 
 ## Task 7. : Create a VirtualMachine in the `apple` project with below requirements. 
