--- a/DO280/14. NetworkPolicy.md
+++ b/DO280/14. NetworkPolicy.md
@@ -21,8 +21,8 @@ oc new-app --name sample-app  --image registry.ocp4.example.com:8443/redhattrain
 - First pod is in `network-policy` namespace and second is in `different-namespace` project
 - Pod in project `different-namespace` should communicate with `network-policy pod`
 - Create an network policy with name `allow-specific`
-- Policy uses labels to specify namespace with `network: different-namespace` and for pods selector
-- Uses label `env=production`
+- Policy uses labels to specify namespace with `network: different-namespace` and
+- For pods selector uses label `env=production`
 - Use port `8080/tcp`
 - Check the logs of `different-namespace pod` for verification
 ---
