--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -1,4 +1,4 @@
-## Task 1. : Create a users `raja`, `suraj`, `punit` and `rajan` with using `htpasswd` and all users must have the password `anishrana2001`
+## Task 1. : Create the users `raja`, `suraj`, `punit` and `rajan` with using `htpasswd` and all users must have the password `anishrana2001`
 ---
 ## Task 2. : Create a system user `student` and then create a SSH key by using the `ssh-keygen` command. Save the file on path `/home/student/.ssh/lab_rsa.pub`.
 - Add the lable `datacenter: paris` on node worker01 and worker02
