--- a/DO316/00. All_IN-ONE.md
+++ b/DO316/00. All_IN-ONE.md
@@ -53,7 +53,7 @@ For project `kiwi`
 - The workload type is the VirtualMachine is `server`
 - The flavor type of the VirtualMachine is `small`
 - The network interface name is `default`
-- The user `suraj` with password `anishrana2001` exists in the cloud-init definition
+- The user `raja` with password `anishrana2001` exists in the cloud-init definition
 - The ssh Key "/home/student/.ssh/lab_rsa.pub" from user devops at workstation has been added as an authorized ssh key via the cloud-init definition
 
 
