Update and rename OADP.md to 00. OADP.md

--- a/EX380/00. OADP.md
+++ b/EX380/00. OADP.md
@@ -2,10 +2,16 @@
 # Task: You need to install the OADP operator and create `ObjectBucketClaim` named `backup` in the `openshift-adp` namespace
 ## Once, it installed, Create an S3-compatible objectstoragebucket named `backup` for OADP to store backups in the `openshift-adp` namespace. Use StorageClass name `openshift-storage.noobaa.io`
 
-## You can use the sample file :
+## You can use the sample file for ObjectBucketClaim :
 ```
 https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/ObjectBucketClaim.yaml
 ```
+  
+## You can use the sample file for DataProtectionApplication:
+```
+https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/DataProtectionApplication.yaml
+```
+
 ---
 
 ### Solution
