--- a/EX380/00. OADP.md
+++ b/EX380/00. OADP.md
@@ -11,6 +11,10 @@ https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/
 ```
 https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/DataProtectionApplication.yaml
 ```
+## You can use the sample file for backup:
+```
+https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/backup-db-manual.yaml
+```
 
 ---
 
