--- a/EX380/00. OADP.md
+++ b/EX380/00. OADP.md
@@ -15,6 +15,10 @@ https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/
 ```
 https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/backup-db-manual.yaml
 ```
+## You can use the sample file for restore:
+```
+https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/restore.yaml
+```
 
 ---
 
