--- a/EX380/00. OADP.md
+++ b/EX380/00. OADP.md
@@ -1,6 +1,6 @@
 
-# Task: You need to install the OADP operator and create `ObjectBucketClaim` named `backup` in the `openshift-adp` namespace
-## Once, it installed, Create an S3-compatible objectstoragebucket named `backup` for OADP to store backups in the `openshift-adp` namespace. Use StorageClass name `openshift-storage.noobaa.io`
+# Task: You need to install the OADP operator and create an S3-compatible `ObjectBucketClaim` named `backup` in the `openshift-adp` namespace
+# Use StorageClass name `openshift-storage.noobaa.io`
 
 ## You can use the sample file for ObjectBucketClaim :
 ```
