--- a/EX380/00. OADP.md
+++ b/EX380/00. OADP.md
@@ -1,6 +1,7 @@
 
 # Task: You need to install the OADP operator and create an S3-compatible `ObjectBucketClaim` named `backup` in the `openshift-adp` namespace
 # Use StorageClass name `openshift-storage.noobaa.io`
+# Take the backup of namespace 'database` and restore it on different namespace i.e. `database-crash`
 
 ## You can use the sample file for ObjectBucketClaim :
 ```
