--- a/EX380/00. OADP.md
+++ b/EX380/00. OADP.md
@@ -1,3 +1,8 @@
+## Prepare the Lab:
+```
+oc new-project database
+oc new-app --name webserver-app1 --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
+```
 
 # Task: You need to install the OADP operator and create an S3-compatible `ObjectBucketClaim` named `backup` in the `openshift-adp` namespace
 # Use StorageClass name `openshift-storage.noobaa.io`
