--- a/EX380/02. OADP.md
+++ b/EX380/02. OADP.md
@@ -60,6 +60,8 @@ oc apply -f backup.yaml
 
 ### For your references.
 ```
+[student@workstation ~]$  oc login -u admin -p redhatocp   https://api.ocp4.example.com:6443
+[student@workstation ~]$  curl -o  ObjectBucketClaim.yaml https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/ObjectBucketClaim.yaml
 [student@workstation ~]$ cat ObjectBucketClaim.yaml
 apiVersion: objectbucket.io/v1alpha1
 kind: ObjectBucketClaim
@@ -73,7 +75,8 @@ spec:
 
 [student@workstation ~]$ oc apply -f ObjectBucketClaim.yaml 
 objectbucketclaim.objectbucket.io/backup created
-[student@workstation ~]$ oc get obc
+
+[student@workstation ~]$ oc get obc -n openshift-adp 
 NAME     STORAGE-CLASS                 PHASE   AGE
 backup   openshift-storage.noobaa.io   Bound   5s
 [student@workstation ~]$ oc extract --to=- cm/backup
