--- a/EX380/02. OADP.md
+++ b/EX380/02. OADP.md
@@ -61,7 +61,13 @@ oc apply -f backup.yaml
 ### For your references.
 ```
 [student@workstation ~]$  oc login -u admin -p redhatocp   https://api.ocp4.example.com:6443
+
+[student@workstation ~]$ oc project openshift-adp 
+Now using project "openshift-adp" on server "https://api.ocp4.example.com:6443".
+
+
 [student@workstation ~]$  curl -o  ObjectBucketClaim.yaml https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/ObjectBucketClaim.yaml
+
 [student@workstation ~]$ cat ObjectBucketClaim.yaml
 apiVersion: objectbucket.io/v1alpha1
 kind: ObjectBucketClaim
@@ -79,6 +85,7 @@ objectbucketclaim.objectbucket.io/backup created
 [student@workstation ~]$ oc get obc -n openshift-adp 
 NAME     STORAGE-CLASS                 PHASE   AGE
 backup   openshift-storage.noobaa.io   Bound   5s
+
 [student@workstation ~]$ oc extract --to=- cm/backup
 # BUCKET_HOST
 s3.openshift-storage.svc
