--- a/EX380/02. OADP.md
+++ b/EX380/02. OADP.md
@@ -122,6 +122,11 @@ signature_v2 = True
 ^C
 [student@workstation ~]$ 
 
+[student@workstation ~]$ curl -o dpa-backup.yml https://raw.githubusercontent.com/anishrana2001/Openshift/refs/heads/main/EX380/DataProtectionApplication.yaml
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+100   681  100   681    0     0   1902      0 --:--:-- --:--:-- --:--:--  1902
+
 
 [student@workstation ~]$ vi dpa-backup.yml
 apiVersion: oadp.openshift.io/v1alpha1
