--- a/EX380/02. OADP.md
+++ b/EX380/02. OADP.md
@@ -183,10 +183,14 @@ NAME                        DESIRED   CURRENT   READY   UP-TO-DATE   AVAILABLE  
 daemonset.apps/node-agent   3         3         3       3            3           <none>          18s
 [student@workstation ~]$ 
 
-
+#### BackupStorageLocation should be in "Available" phase. 
 [student@workstation ~]$ oc get BackupStorageLocation
 NAME            PHASE       LAST VALIDATED   AGE    DEFAULT
 oadp-backup-1   Available   20s              119s   true
+
+### If it is not the case then, you may execute the below command.
+
+[student@workstation ~]$ oc describe BackupStorageLocation/oadp-backup-1 
 
 [student@workstation ~]$ oc get volumesnapshotclass --show-labels 
 NAME                                                 DRIVER                                  DELETIONPOLICY   AGE    LABELS
