--- a/EX380/02. OADP.md
+++ b/EX380/02. OADP.md
@@ -183,6 +183,13 @@ NAME                        DESIRED   CURRENT   READY   UP-TO-DATE   AVAILABLE  
 daemonset.apps/node-agent   3         3         3       3            3           <none>          18s
 [student@workstation ~]$ 
 
+
+### If you don't see velero daemonset then, you can use below command.
+
+[student@workstation ~]$ oc describe dataprotectionapplication.oadp.openshift.io/oadp-backup
+
+
+
 #### BackupStorageLocation should be in "Available" phase. 
 [student@workstation ~]$ oc get BackupStorageLocation
 NAME            PHASE       LAST VALIDATED   AGE    DEFAULT
